# SensorCalibration

./: README.md
displayply/: CMakeLists.txt  README.md  displayply.cpp
imu-lidar/: CMakeLists.txt  README.md  imu-lidar算法文档.docx  package.xml
imu-lidar/config/: cloud_registration.rviz  lidar_Imu.rviz
imu-lidar/data/ndt/: transformationParis.yaml
imu-lidar/data/ndt_tku/: transformationParis.yaml
imu-lidar/examples/: CloudRegistration.cpp  HandeyeDataExporter.cpp  HandeyeExample.cpp  MultiLidarCalibration.cpp  PclViewer.cpp  PosesEvaluation.cpp
imu-lidar/include/sensor_calibration/: DualQuaternion.h  EigenUtils.h  ErrorTerm.h  HandEyeCalibration.h  MultiLidarOptimization.h  QuaternionMapping.h  calibration_tool.h
imu-lidar/launch/: cloud_registrtion.launch  handeye_example.launch  handeye_exporter.launch
imu-lidar/src/: HandEyeCalibration.cpp  MultiLidarOptimization.cpp
lidar_align/: CMakeLists.txt  README.md  lidar_align_po2pl.docx
lidar_align/include/lidar_align/: aligner.h  loader.h  sensors.h
lidar_align/launch/: lidar_align.launch
lidar_align/src/: aligner.cpp  lidar_align_node.cpp  loader.cpp  sensors.cpp
localization/: CMakeLists.txt  README.md  changelog.rst  package.xml
localization/include/localization/: localization.h
localization/src/: localization_node.cpp
ndt_tku/: CMakeLists.txt  README.md  package.xml
ndt_tku/src/: newton.cpp
ndt_tku_mapping/: CMakeLists.txt  README.md  package.xml
ndt_tku_mapping/launch/: ndt_tku_mapping.launch
ndt_tku_mapping/src/: ndt_mapping_tku.cpp
velodyne_compensation/: CMakeLists.txt  README.md  package.xml
velodyne_compensation/include/velodyne_compensation/: compensator.h  transform.h
velodyne_compensation/launch/: velodyne_compensation.launch
velodyne_compensation/src/: compensator.cpp  velodyne_compensation_node.cpp
wgs_conversions/: CMakeLists.txt  package.xml
wgs_conversions/include/wgs_conversions/: wgs_conversions.h
wgs_conversions/src/: geodetic_conversions.cpp  wgs_conversions.cpp
